--- a/WS05/part 2/Project1.vcxproj
+++ b/WS05/part 2/Project1.vcxproj
@@ -128,11 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Book.cpp" />
+    <ClCompile Include="Movie.cpp" />
     <ClCompile Include="SpellChecker.cpp" />
+    <ClCompile Include="w5_p2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h" />
     <ClInclude Include="Collection.h" />
+    <ClInclude Include="Movie.h" />
     <ClInclude Include="SpellChecker.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
